// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover > Snapshot Tests > matches snapshot for default popover 1`] = `
<div>
  <button
    aria-controls="radix-_r_0_"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    Open
  </button>
</div>
`;

exports[`Popover > Snapshot Tests > matches snapshot for open popover 1`] = `
<div>
  <button
    aria-controls="radix-_r_1_"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Open
  </button>
</div>
`;
